# zenmon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/run-zenmon/: SKILL.md  driver.sh
crates/dotori-tui/src/: app.rs  lib.rs
crates/dotori-tui/src/views/: stream.rs
crates/zemon-cli/: Cargo.toml
crates/zemon-cli/src/: cli.rs  duration.rs  main.rs
crates/zemon-cli/tests/: connect_timeout_env.rs  json_errors.rs  keyexpr.rs  log_contract.rs
crates/zemon-core/: Cargo.toml
crates/zemon-core/src/: capture.rs  config.rs  doctor.rs  error.rs  info.rs  keyexpr.rs  lib.rs  nodediff.rs  output.rs  query.rs  queryable.rs  registry.rs  scout.rs  session.rs  subscriber.rs  trace.rs  types.rs
crates/zemon-tui/: Cargo.toml
crates/zemon-tui/src/: app.rs  event.rs  lib.rs
crates/zemon-tui/src/views/: dashboard.rs  liveliness.rs  mod.rs  network.rs  nodes.rs  query.rs  stream.rs  topics.rs
crates/zenmon-cli/: Cargo.toml
crates/zenmon-cli/src/: cli.rs  duration.rs  main.rs  watch.rs
crates/zenmon-cli/tests/: connect_timeout_env.rs  contract.rs  json_errors.rs  keyexpr.rs  log_contract.rs
crates/zenmon-cli/tests/fixtures/: sample.contract.yaml
crates/zenmon-core/: Cargo.toml
crates/zenmon-core/src/: capture.rs  config.rs  contract.rs  discover.rs  doctor.rs  error.rs  info.rs  keyexpr.rs  lib.rs  merge.rs  output.rs  query.rs  queryable.rs  registry.rs  scenario.rs  scout.rs  session.rs  subscriber.rs  topology.rs  trace.rs  types.rs
crates/zenmon-tui/: Cargo.toml
crates/zenmon-tui/src/: app.rs  event.rs  lib.rs
crates/zenmon-tui/src/views/: dashboard.rs  liveliness.rs  mod.rs  network.rs  nodes.rs  query.rs  stream.rs  topics.rs  topology.rs
docs/superpowers/plans/: 2026-04-14-dotori-cli-implementation.md  2026-04-15-nodes-discovery-merge.md  2026-04-15-phase1-network-visibility.md  2026-04-15-tui-mouse-support.md  2026-04-16-liveliness-view.md  2026-05-13-rename-zemon.md  2026-05-13-rename-zenmon.md  2026-05-13-tui-mode-switch.md  2026-07-16-10-exit-codes.md  2026-07-16-11-keyexpr-test.md  2026-07-16-5-bounded-sub.md  2026-07-16-6-json-errors.md  2026-07-16-7-json-envelope.md  2026-07-16-8-pub-json.md  2026-07-16-9-duration-parser.md  2026-07-16-payload-fidelity.md  2026-07-16-realtime-capture-db.md  2026-07-16-tui-network-view.md
docs/superpowers/specs/: 2026-04-14-dotori-cli-design.md  2026-04-15-nodes-discovery-merge-design.md  2026-04-15-tui-mouse-support-design.md  2026-04-16-liveliness-view-design.md  2026-05-13-rename-zemon-design.md  2026-05-13-rename-zenmon-design.md  2026-05-13-tui-mode-switch-design.md  2026-05-14-app-split-design.md  2026-07-16-cli-agent-ergonomics-design.md  2026-07-16-contract-consumption-design.md  2026-07-16-msgpack-payload-decode-design.md  2026-07-16-realtime-capture-db-design.md  2026-07-16-tui-network-view-design.md  2026-07-17-scenario-runner-design.md
examples/: README.md  mission_diagnosis.py
