[workspace]
resolver = "2"
members = [
    "crates/zemon-core",
    "crates/zemon-cli",
    "crates/zemon-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zemon-core = { path = "crates/zemon-core" }
zemon-tui = { path = "crates/zemon-tui" }
zenoh = { version = "1.7", features = ["unstable"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
bitflags = "2"
