[workspace]
resolver = "2"
members = [
    "crates/zenmon-core",
    "crates/zenmon-cli",
    "crates/zenmon-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zenmon-core = { path = "crates/zenmon-core" }
zenmon-tui = { path = "crates/zenmon-tui" }
zenoh = { version = "1.7", features = ["unstable"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
thiserror = "2"
bitflags = "2"
humantime = "2"
base64 = "0.22"
rmpv = "1"
