[package]
name = "zemon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zemon"
path = "src/main.rs"

[dependencies]
zemon-core.workspace = true
zemon-tui.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
clap = { version = "4", features = ["derive"] }
