[package]
name = "zenmon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zenmon"
path = "src/main.rs"

[dependencies]
zenmon-core.workspace = true
zenmon-tui.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
clap = { version = "4", features = ["derive"] }
