[package]
name = "zenmon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zenmon"
path = "src/main.rs"

[dependencies]
zenmon-core.workspace = true
zenmon-tui.workspace = true
zenoh.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
humantime.workspace = true
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
