[package]
name = "zenmon-core"
version.workspace = true
edition.workspace = true

[dependencies]
zenoh.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
thiserror.workspace = true
bitflags.workspace = true
humantime.workspace = true
base64.workspace = true
rmpv.workspace = true
